--- a/index.html
+++ b/index.html
@@ -23,24 +23,25 @@
         }
 
         img {
-            width: 300px; /* Standard størrelse */
+            width: 300px;
             height: auto;
             border-radius: 10px;
             transition: width 0.3s ease-in-out;
         }
 
         .large {
-            width: 500px; /* Større størrelse for liggende bilde */
+            width: 500px;
         }
 
         .button-container {
             display: flex;
             justify-content: center;
+            gap: 20px;
             margin-top: 20px;
         }
 
         .swap-buttons {
-            flex-direction: row-reverse; /* Bytter plass på Ja og Nei-knappen */
+            flex-direction: row-reverse;
         }
 
         #yesButton, #no {
@@ -52,7 +53,6 @@
             border: none;
             cursor: pointer;
             transition: transform 0.3s, background-color 0.3s;
-            margin: 0 10px; /* Mellomrom mellom knappene */
         }
 
         #yesButton {
@@ -174,13 +174,11 @@
                             <h1>PRØV DEG HAHAHA</h1>
                             <img src="https://github.com/KristianMB13/valentine-website/blob/main/IMG_0920.jpg?raw=true" width="300">
                             <br><br>
-                            <button onclick="location.reload()" style="background-color:#ef476f; color:#fff; border:none; padding:10px 20px; border-radius:10px; font-size:20px; cursor:pointer;">
-                                Ja
-                            </button>
-                        `;
-                });
-            }
-        });
+                            <script>window.location.href = window.location.href;</script>
+    `;
+    });
+    }
+    });
     </script>
 </body>
 </html>
