--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                 step++;
 
-                if (step === 2) { // "Er du seriøs nå eller?" -> Snu knappene og bytt funksjonene
+                if (step === 2) {
                     noButton.onclick = function () {
                         document.body.innerHTML = `
                                 <h1>Jeg elsker deg, bebe ❤️</h1>
@@ -165,9 +165,14 @@
                                 <h1>PRØV DEG HAHAHA</h1>
                                 <img src="https://github.com/KristianMB13/valentine-website/blob/main/IMG_0920.jpg?raw=true" width="300">
                                 <br><br>
-                                <button id="yesButton" style="background-color:#ef476f; color:#fff; border:none; padding:10px 20px; border-radius:10px; font-size:20px; cursor:pointer;">
-                                    Ja
-                                </button>
+                                <div class="button-container">
+                                    <button id="yesButton" style="background-color:#ef476f; color:#fff; border:none; padding:10px 20px; border-radius:10px; font-size:20px; cursor:pointer;">
+                                        Ja
+                                    </button>
+                                    <button id="no" style="background-color:#06d6a0; color:#fff; border:none; padding:10px 20px; border-radius:10px; font-size:20px; cursor:pointer; position: absolute;">
+                                        Nei
+                                    </button>
+                                </div>
                             `;
 
                         document.getElementById("yesButton").addEventListener("click", function () {
@@ -179,6 +184,14 @@
                                         Start på nytt
                                     </button>
                                 `;
+                        });
+
+                        var noBtn = document.getElementById("no");
+                        noBtn.addEventListener("mouseover", function () {
+                            var x = Math.random() * (window.innerWidth - 150);
+                            var y = Math.random() * (window.innerHeight - 150);
+                            noBtn.style.left = x + "px";
+                            noBtn.style.top = y + "px";
                         });
                     };
                 }
