Lagt til nytt bilded

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
                                 <img src="https://github.com/KristianMB13/valentine-website/blob/main/IMG_0920.jpg?raw=true" width="300">
                                 <br><br>
                                 <div class="button-container">
-                                    <button id="yesButton" style="background-color:#ef476f; color:#fff; border:none; padding:10px 20px; border-radius:10px; font-size:20px; cursor:pointer;">
+                                    <button id="yesButton" style="background-color:#06d6a0; color:#fff; border:none; padding:10px 20px; border-radius:10px; font-size:20px; cursor:pointer;">
                                         Ja
                                     </button>
-                                    <button id="no" style="background-color:#06d6a0; color:#fff; border:none; padding:10px 20px; border-radius:10px; font-size:20px; cursor:pointer;">
+                                    <button id="no" style="background-color:#ef476f; color:#fff; border:none; padding:10px 20px; border-radius:10px; font-size:20px; cursor:pointer;">
                                         Nei
                                     </button>
                                 </div>
